# Backend-Django

extra_commerce/: db.sqlite3  dump.rdb  manage.py  pyproject.toml  requirements.txt
extra_commerce/api_urls/: v1.py
extra_commerce/extra_commerce/: asgi.py  settings.py  urls.py  wsgi.py
extra_commerce/orders/: apps.py  choices.py  consumers.py  models.py  repos.py  serializers.py  services.py  signals.py  views.py
extra_commerce/orders/migrations/: 0001_initial.py
extra_commerce/orders/urls/: v1.py
extra_commerce/products/: admin.py  models.py  permissions.py  repos.py  serializers.py  services.py  signals.py  views.py
extra_commerce/products/migrations/: 0001_initial.py  0002_alter_product_data.py  0003_product_user.py  0004_remove_product_user.py
extra_commerce/products/urls/: v1.py
extra_commerce/seller_products/: admin.py  apps.py  models.py  permissions.py  serializers.py  views.py
extra_commerce/seller_products/migrations/: 0001_initial.py  0002_sellerproduct_is_active_alter_sellerproduct_product.py
extra_commerce/seller_products/urls/: v1.py
extra_commerce/users/: admin.py  choises.py  models.py  repos.py  serializers.py  services.py  views.py
extra_commerce/users/migrations/: 0001_initial.py  0002_alter_customuser_managers_customuser_username_and_more.py  0003_customuser_phone_number.py  0004_alter_customuser_phone_number.py  (+1 more)
extra_commerce/utils/: mixins.py
lab-01/: p-01.py  (+10 more)
shop-back/: db.sqlite3  pyproject.toml
shop-back/api/: admin.py  models.py  serializers.py  urls.py  views.py
shop-back/shop_back/: settings.py  urls.py
(+45 files in other folders)
